--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>
             colinbh.github.io
         </title>
+        <link href="css/main.css" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -13,7 +14,8 @@
                 </a>
             </h1>
         </header>
-        <section>
+        <div class="line"></div>
+        <article>
             <h2>
                 Blog Entries
             </h2>
@@ -34,7 +36,8 @@
                     </a>
                 </li>
             </ul>
-        </section>
+        </article>
+        <div class="line"></div>
         <footer>
             <p>
                 Sprint blog by Colin H. for the course CIT 280 
