--- a/entries/2022-02-12-sprint-1-review.html
+++ b/entries/2022-02-12-sprint-1-review.html
@@ -4,6 +4,7 @@
         <title>
             colinbh.github.io - Sprint 1 Review
         </title>
+        <link href="../css/main.css" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -16,6 +17,7 @@
                 </span>
             </h1>
         </header>
+        <div class="line"></div>
         <article>
             <section>
                 <h2>
@@ -47,6 +49,7 @@
                 </p>
             </section>
         </article>
+        <div class="line"></div>
         <footer>
             <p>
                 Sprint blog by Colin H. for the course CIT 280 
