Add Sprint 5 to Index

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
                         Sprint 4
                     </a>
                 </li>
+                <li>
+                    <a href="entries/2022-05-03-sprint-5-review.html">
+                        Sprint 5
+                    </a>
+                </li>
             </ul>
         </article>
         <div class="line"></div>
